fix images spilling out of the display panel box.

--- a/site/_sass/_display.scss
+++ b/site/_sass/_display.scss
@@ -54,6 +54,8 @@
 
     > * {
       margin: 0em auto;
+      max-width: 100%;
+      max-height: 100%;
     }
 
     &:not(:last-child) {
